# Taskestration

./: CHANGELOG.md  Makefile  README.md  pyproject.toml  ruff.toml  run_checks.sh
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
automations/example_python/: config.yaml  run.py
automations/example_shell/: config.yaml  run.sh
automations/sort_screenshots/: config.yaml  run.py
config/: global.yaml
scripts/: __init__.py  interactive.py  register.py  run.py  scheduler.py
src/: __init__.py
src/cli/: __init__.py  styles.py
src/core/: __init__.py  automation.py  runner.py
src/registry/: __init__.py  registry.py
src/runners/: __init__.py  python_runner.py  runner_factory.py  shell_runner.py
src/scheduler/: __init__.py  schedule_info.py  scheduler.py
src/utils/: __init__.py  logging.py
