[project]
name = "automations"
version = "0.1.1"
description = "Automation control panel with CRON scheduling support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pyyaml>=6.0", "loguru>=0.7.0", "croniter>=2.0.0"]

[project.optional-dependencies]
dev = ["ruff>=0.1.0", "mypy>=1.7.0", "types-pyyaml>=6.0.0"]

[project.scripts]
automation-register = "scripts.register:main"
automation-run = "scripts.run:main"
automation-scheduler = "scripts.scheduler:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["croniter.*", "loguru.*"]
ignore_missing_imports = true
